# myANN

./: LICENSE  README.md
OpenCV Mnist/: CMakeLists.txt  NNtrain.cpp
OpenCVMNIST/: .gitignore  NNtrain.cpp  README.md
myANN/: .gitignore  CMakeLists.txt  README.md  myANN.cpp  myANN.h  myANNtest.cpp
myANN MNIST/: myANNMNIST.cpp
myANNMNIST/: .gitignore  CMakeLists.txt  README.md  myANNMNIST.cpp
