cmake_minimum_required(VERSION 2.8)
project( myANNtest )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /home/mattia/Scrivania/opencv-3.2.0/build)
find_package( OpenCV REQUIRED )
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( myANNtest myANNtest.cpp )
target_link_libraries( myANNtest ${OpenCV_LIBS} )
